--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,23 +1,22 @@
 # http://doc.gitlab.com/ce/ci/yaml/README.html
-# https://hub.docker.com/_/maven/
-# https://developer.android.com/sdk/index.html#downloads
+# https://hub.docker.com/_/gradle/
+# https://developer.android.com/studio/index.html#downloads
 
-image: maven:latest
+image: gradle:latest
 
 variables:
   PUBLIC: "public"
 
 .android_sdk: &android_sdk
   variables:
-    ANDROID_SDK: "24.4.1"
+    ANDROID_SDK_TOOLS: "3859397"
+    ANDROID_BUILD_TOOLS: "27.0.3"
     ANDROID_API: "8"
-    ANDROID_BUILD_TOOLS: "23.0.3"
-    ANDROID_HOME: "${CI_PROJECT_DIR}/../android-sdk-linux"
+    ANDROID_HOME: "${CI_PROJECT_DIR}/.."
   before_script:
-    - apt-get --quiet update --yes
-    - apt-get --quiet install --yes lib32stdc++6 lib32z1
-    - wget --quiet --output-document=- "https://dl.google.com/android/android-sdk_r${ANDROID_SDK}-linux.tgz" | tar --extract --gzip -C .. && echo "Android SDK tools ${ANDROID_SDK} package downloaded and extracted"
-    - echo y | ${ANDROID_HOME}/tools/android --silent update sdk --no-ui --all --filter "platform-tools,android-${ANDROID_API},build-tools-${ANDROID_BUILD_TOOLS}" | sed '/^Terms and Conditions/,/^Do you accept the license/d'
+    - wget --quiet -O "${ANDROID_HOME}/tools.zip" "https://dl.google.com/android/repository/sdk-tools-linux-${ANDROID_SDK_TOOLS}.zip" && unzip -q "${ANDROID_HOME}/tools.zip" -d "${ANDROID_HOME}" && echo "Android SDK tools ${ANDROID_SDK_TOOLS} package downloaded and extracted"
+    - yes | ${ANDROID_HOME}/tools/bin/sdkmanager --licenses | sed '/^---------------------------------------$/,/^---------------------------------------$/d' || true
+    - ${ANDROID_HOME}/tools/bin/sdkmanager "platform-tools" "platforms;android-${ANDROID_API}" "build-tools;${ANDROID_BUILD_TOOLS}"
 
 stages:
   - build
@@ -28,9 +27,10 @@ pages:
     - master
   <<: *android_sdk
   script:
-    - mvn --batch-mode package | sed '/^\[INFO\] Download/d'
+    - drawables_dpis_creation.sh
+    - gradle -PANDROID_BUILD_TARGET_SDK_VERSION=${ANDROID_API} -PANDROID_BUILD_TOOLS_VERSION=${ANDROID_BUILD_TOOLS} -PANDROID_BUILD_SDK_VERSION=${ANDROID_API} packageDebug
     - mkdir -p "${PUBLIC}"
-    - mv -v target/*.apk "${PUBLIC}/"
+    - mv -v */build/outputs/apk/*-debug.apk "${PUBLIC}/"
   artifacts:
     paths:
       - ${PUBLIC}
