--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,13 @@ android {
     // /opt/android-sdk-update-manager/tools/bin/sdkmanager 'platform-tools' 'build-tools;27.0.3' 'platforms;android-8'
     buildToolsVersion project.ANDROID_BUILD_TOOLS_VERSION
     compileSdkVersion Integer.parseInt(project.ANDROID_BUILD_SDK_VERSION)
+    defaultConfig {
+        jackOptions {
+            enabled true
+        }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
