Updated build environment and SVG icon.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -27,7 +27,7 @@ pages:
     - master
   <<: *android_sdk
   script:
-    - drawables_dpis_creation.sh
+    - ./drawables_dpis_creation.sh
     - gradle -PANDROID_BUILD_TARGET_SDK_VERSION=${ANDROID_API} -PANDROID_BUILD_TOOLS_VERSION=${ANDROID_BUILD_TOOLS} -PANDROID_BUILD_SDK_VERSION=${ANDROID_API} packageDebug
     - mkdir -p "${PUBLIC}"
     - mv -v */build/outputs/apk/*-debug.apk "${PUBLIC}/"
