--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,28 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="io.github.rychly.simplelauncher"
-          android:versionCode="1" android:versionName="1.0.0">
-    <uses-sdk android:minSdkVersion="8"/>
+    android:versionCode="1" android:versionName="1.0.0">
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:allowBackup="true">
         <activity android:name=".FavouritesActivity" android:label="@string/app_name_favourites"
-                  android:clearTaskOnLaunch="true" android:stateNotNeeded="true" android:excludeFromRecents="true"
-                  android:launchMode="singleTask">
-        </activity>
+            android:clearTaskOnLaunch="true" android:stateNotNeeded="true" android:excludeFromRecents="true"
+            android:launchMode="singleTask"></activity>
         <activity android:name=".ApplicationsActivity" android:label="@string/app_name_applications"
-                  android:clearTaskOnLaunch="true" android:stateNotNeeded="true" android:excludeFromRecents="true"
-                  android:launchMode="singleTask">
-        </activity>
+            android:clearTaskOnLaunch="true" android:stateNotNeeded="true" android:excludeFromRecents="true"
+            android:launchMode="singleTask"></activity>
         <activity android:name=".FileManagerActivity" android:label="@string/app_name_filemanager"
-                  android:clearTaskOnLaunch="true" android:stateNotNeeded="true" android:excludeFromRecents="true"
-                  android:launchMode="singleTask">
-        </activity>
+            android:clearTaskOnLaunch="true" android:stateNotNeeded="true" android:excludeFromRecents="true"
+            android:launchMode="singleTask"></activity>
         <activity android:name=".SettingsActivity" android:label="@string/app_name_settings"
-                  android:clearTaskOnLaunch="true" android:stateNotNeeded="true" android:excludeFromRecents="true"
-                  android:launchMode="singleTask">
+            android:clearTaskOnLaunch="true" android:stateNotNeeded="true" android:excludeFromRecents="true"
+            android:launchMode="singleTask">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.HOME"/>
-                <category android:name="android.intent.category.LAUNCHER"/>
-                <category android:name="android.intent.category.DEFAULT"/>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.HOME" />
+                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
     </application>
