Include generated drawables.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,7 @@
 # https://hub.docker.com/_/gradle/
 # https://developer.android.com/studio/index.html#downloads
 
-image: gradle:latest
+image: openjdk:8-jdk
 
 variables:
   PUBLIC: "public"
@@ -27,8 +27,8 @@ pages:
     - master
   <<: *android_sdk
   script:
-    - ./drawables_dpis_creation.sh
-    - gradle -PANDROID_BUILD_TARGET_SDK_VERSION=${ANDROID_API} -PANDROID_BUILD_TOOLS_VERSION=${ANDROID_BUILD_TOOLS} -PANDROID_BUILD_SDK_VERSION=${ANDROID_API} packageDebug
+    - which convert 2>/dev/null && ./drawables_dpis_creation.sh
+    - ./gradlew -PANDROID_BUILD_TARGET_SDK_VERSION=${ANDROID_API} -PANDROID_BUILD_TOOLS_VERSION=${ANDROID_BUILD_TOOLS} -PANDROID_BUILD_SDK_VERSION=${ANDROID_API} packageDebug
     - mkdir -p "${PUBLIC}"
     - mv -v */build/outputs/apk/*-debug.apk "${PUBLIC}/"
   artifacts:
