--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="io.github.rychly.simplelauncher"
     android:versionCode="1" android:versionName="1.0.0">
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:allowBackup="true">
         <activity android:name=".MainActivity" android:label="@string/app_name" android:clearTaskOnLaunch="true"
             android:stateNotNeeded="true" android:excludeFromRecents="true" android:launchMode="singleTask">
