--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.1.0'
     }
 }
 
@@ -33,6 +33,15 @@ android {
     aaptOptions {
         // tell aapt to keep the attribute ids around
         //additionalParameters "--no-version-vectors"
+    }
+
+    signingConfigs {
+        debug {
+            storeFile file('./debug.keystore')
+            storePassword "android"
+            keyAlias "androiddebugkey"
+            keyPassword "android"
+        }
     }
 }
 
